--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -53,6 +53,12 @@ p {
 }
 
 
+.navbar-default {
+  .navbar-toggle {
+    margin-top: 26px;
+  }  
+}
+
 // Header
 header {
   margin: 0;
